Angular template integration, searching user and OpenApi Swagger configuration added

--- a/social-medium/app-social-medium/src/app/components/homepage/homepage.component.html
+++ b/social-medium/app-social-medium/src/app/components/homepage/homepage.component.html
@@ -1,8 +1,3 @@
-<div class="row g-0">
-  <div class="col">
-    <input type="text" class="form-control" placeholder="First name" aria-label="First name">
-  </div>
-  <div class="col">
-    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
-  </div>
-</div>
+<app-navbar></app-navbar>
+<app-user-search></app-user-search>
+<app-connections></app-connections>
