--- a/social-medium/app-social-medium/src/app/components/navbar/navbar.component.html
+++ b/social-medium/app-social-medium/src/app/components/navbar/navbar.component.html
@@ -8,6 +8,23 @@
 
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
+        <a class="nav-link" routerLink="/connections">Connections</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/requests">Requests</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/blocks">Blocks</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <i class="fa fa-bell">
+            <span class="badge badge-info">11</span>
+          </i>
+          Test
+        </a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#">
           <i class="fa fa-bell">
             <span class="badge badge-info">11</span>
