--- a/social-medium/app-social-medium/src/app/components/blocked/blocked.component.html
+++ b/social-medium/app-social-medium/src/app/components/blocked/blocked.component.html
@@ -1,1 +1,22 @@
-<p>blocked works!</p>
+<div class="content">
+  <div class="container">
+    <!-- end row -->
+    <div class="row">
+      <div class="col-lg-4" *ngFor="let blockedUser of blockedUsers">
+        <div class="text-center card-box">
+          <div class="member-card pt-2 pb-2">
+            <div class="thumb-lg member-thumb mx-auto"><img src="{{blockedUser.profileImagePath}}" class="rounded-circle img-thumbnail" alt="profile-image"></div>
+            <div class="">
+              <h4>{{blockedUser.firstName}} {{blockedUser.surname}}</h4>
+              <p>Email: {{blockedUser.email}}</p>
+              <p class="text-muted">@Founder <span>| </span><span><a href="#" class="text-pink">websitename.com</a></span></p>
+            </div>
+            <button type="button" class="btn btn-success mt-3 btn-warning waves-effect w-md waves-light" (click)="unblock(blockedUser.id)">Unblock Connection</button>
+          </div>
+        </div>
+      </div>
+      <!-- end col -->
+    </div>
+  </div>
+  <!-- container -->
+</div>
