--- a/social-medium/app-social-medium/src/app/components/connections/connections.component.html
+++ b/social-medium/app-social-medium/src/app/components/connections/connections.component.html
@@ -1,25 +1,23 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-8">
-      <div class="people-nearby">
-
-        <div class="nearby-user">
-          <div class="row">
-            <div class="col-md-2 col-sm-2">
-              <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="user" class="profile-photo-lg">
+<div class="content">
+  <div class="container">
+    <!-- end row -->
+    <div class="row">
+      <div class="col-lg-4" *ngFor="let connection of connections">
+        <div class="text-center card-box">
+          <div class="member-card pt-2 pb-2">
+            <div class="thumb-lg member-thumb mx-auto"><img src="{{connection.profileImagePath}}" class="rounded-circle img-thumbnail" alt="profile-image"></div>
+            <div class="">
+              <h4>{{connection.firstName}} {{connection.surname}}</h4>
+              <p>Email: {{connection.email}}</p>
+              <p class="text-muted">@Founder <span>| </span><span><a href="#" class="text-pink">websitename.com</a></span></p>
             </div>
-            <div class="col-md-7 col-sm-7">
-              <h5><a href="#" class="profile-link">Sophia Page</a></h5>
-<!--              <p>Software Engineer</p>-->
-              <p class="text-muted">500m away</p>
-            </div>
-            <div class="col-md-3 col-sm-3">
-              <button class="btn btn-primary pull-right">Add Friend</button>
-            </div>
+            <button type="button" class="btn btn-danger mt-3 btn-rounded waves-effect w-md waves-light" (click)="removeConnection(connection.id)">Remove Connection</button>
+            <button type="button" class="btn btn-danger mt-3 btn-rounded waves-effect w-md waves-light" (click)="blockConnection(connection.id)">Block Connection</button>
           </div>
         </div>
-
       </div>
+      <!-- end col -->
     </div>
   </div>
+  <!-- container -->
 </div>
