--- a/social-medium/app-social-medium/src/app/components/navbar/navbar.component.html
+++ b/social-medium/app-social-medium/src/app/components/navbar/navbar.component.html
@@ -4,19 +4,19 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="navbar navbar-expand" id="navbarSupportedContent">
 
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/connections">Connections</a>
+        <a class="nav-link" routerLink="/">Home</a>
       </li>
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" routerLink="/profile">Profile</a>-->
+<!--      </li>-->
       <li class="nav-item">
-        <a class="nav-link" routerLink="/requests">Requests</a>
+        <a class="nav-link" routerLink="/mutuals">Mutuals</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/blocks">Blocks</a>
-      </li>
-      <li class="nav-item">
+      <!--<li class="nav-item">
         <a class="nav-link" href="#">
           <i class="fa fa-bell">
             <span class="badge badge-info">11</span>
@@ -39,7 +39,7 @@
           </i>
           Test
         </a>
-      </li>
+      </li>-->
       <li class="nav-item float-right">
         <a class="nav-link" href="#">
           Log Out
