--- a/social-medium/app-social-medium/src/app/components/connections/connections.component.html
+++ b/social-medium/app-social-medium/src/app/components/connections/connections.component.html
@@ -2,17 +2,17 @@
   <div class="container">
     <!-- end row -->
     <div class="row">
-      <div class="col-lg-4" *ngFor="let connection of connections">
+      <div class="col-lg-4" *ngFor="let userConnection of userConnections">
         <div class="text-center card-box">
           <div class="member-card pt-2 pb-2">
-            <div class="thumb-lg member-thumb mx-auto"><img src="{{connection.profileImagePath}}" class="rounded-circle img-thumbnail" alt="profile-image"></div>
+            <div class="thumb-lg member-thumb mx-auto"><img src="{{userConnection?.connection?.profileImagePath}}" class="rounded-circle img-thumbnail" alt="profile-image"></div>
             <div class="">
-              <h4>{{connection.firstName}} {{connection.surname}}</h4>
-              <p>Email: {{connection.email}}</p>
+              <h4>{{userConnection?.connection?.firstName}} {{userConnection?.connection?.surname}}</h4>
+              <p>Email: {{userConnection?.connection?.email}}</p>
               <p class="text-muted">@Founder <span>| </span><span><a href="#" class="text-pink">websitename.com</a></span></p>
             </div>
-            <button type="button" class="btn btn-danger mt-3 btn-rounded waves-effect w-md waves-light" (click)="removeConnection(connection.id)">Remove Connection</button>
-            <button type="button" class="btn btn-danger mt-3 btn-rounded waves-effect w-md waves-light" (click)="blockConnection(connection.id)">Block Connection</button>
+            <button type="button" class="btn btn-danger mt-3 btn-rounded waves-effect w-md waves-light" (click)="removeConnection(userConnection?.connection?.id)">Remove Connection</button>
+            <button type="button" class="btn btn-danger mt-3 btn-rounded waves-effect w-md waves-light" (click)="blockConnection(userConnection?.connection?.id)">Block Connection</button>
           </div>
         </div>
       </div>
