--- a/social-medium/app-social-medium/src/app/components/blocked/blocked.component.html
+++ b/social-medium/app-social-medium/src/app/components/blocked/blocked.component.html
@@ -1,9 +1,9 @@
 <div class="content">
   <div class="container">
     <!-- end row -->
-    <div class="row">
+    <div class="row" #removable>
       <div class="col-lg-4" *ngFor="let blockedUserConnection of blockedUserConnections">
-        <div class="text-center card-box">
+        <div class="text-center card-box removable-{{blockedUserConnection?.connection?.id}}">
           <div class="member-card pt-2 pb-2">
             <div class="thumb-lg member-thumb mx-auto"><img src="{{blockedUserConnection?.connection?.profileImagePath}}" class="rounded-circle img-thumbnail" alt="profile-image"></div>
             <div class="">
