--- a/social-medium/app-social-medium/src/app/components/navbar/navbar.component.html
+++ b/social-medium/app-social-medium/src/app/components/navbar/navbar.component.html
@@ -16,6 +16,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/mutuals">Mutuals</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/register">Register</a>
+      </li>
       <!--<li class="nav-item">
         <a class="nav-link" href="#">
           <i class="fa fa-bell">
